# langgraph

./: .dockerignore  .editorconfig  .env.example  .git-commit-message.tmp  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  ecosystem.config.js  langgraph.json  novel  pyproject.toml
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: novelfactory.conf
deploy/scripts/: entrypoint.sh  healthcheck.sh  init-db.sql  init_lark.py  init_lark_poststart.py  migration_add_quality_columns.sql  start_writing.sh
docs/: ARCHITECTURE.md  PRINCIPLES.md  SCORING.md
docs/agent-patterns/: LANGGRAPH_PATTERNS_REFERENCE.md  MEDIA_AGENT_PATTERNS.md  REVIEW_AGENT_PATTERNS.md  SETUP_AGENT_PATTERNS.md  SYNC_AGENT_PATTERNS.md  WRITING_AGENT_PATTERNS.md
frontend/: .gitignore  Dockerfile
server/tools-proxy/: Dockerfile  app.py  init_lark.py  requirements.txt
skills/: chapter_writing.md  quality_review.md  story_planning.md
src/novelfactory/: WRITING_GUIDE_USAGE.md  __init__.py  goal.py  memory.py  model_factory.py  scheduler.py  secret_context.py  subagents.py
src/novelfactory/agents/: __init__.py  media_agents.py  quality_panel_agents.py  registry.py  review_agents.py  setup_agents.py  sync_agents.py  writing_agents.py
src/novelfactory/agents/infra/: __init__.py  _retry_common.py  async_retry.py  circuit_breaker.py  helpers.py  (+8 more)
src/novelfactory/analysis/: __init__.py  ai_style_analyzer.py  community_detection.py  old_reader_reviewer.py
src/novelfactory/api/: time_travel.py
src/novelfactory/channels/: __init__.py  adapter.py  base.py  commands.py  connection_identity.py  feishu.py  feishu_run_policy.py  manager.py  message_bus.py  run_policy.py  runtime_config_store.py  service.py  store.py
src/novelfactory/cli/: __main__.py  commands.py  dashboard.py
src/novelfactory/community/: __init__.py  url_safety.py
src/novelfactory/config/: __init__.py  constants.py  database.py  llm.py  llm_params.py  pricing.py  quota.py  settings.py
src/novelfactory/crews/: __init__.py  review_queue.py  supervisor.py
src/novelfactory/evaluation/: __init__.py  coordinator.py  schemas.py  service.py  utils.py
src/novelfactory/graph/: __init__.py  checkpointer.py  lightweight_setup.py  monitor_node.py  new_builder.py  node_specs.py  routing.py
src/novelfactory/integrations/: __init__.py
src/novelfactory/mcp/: __init__.py  client.py  session_pool.py
src/novelfactory/middleware/: __init__.py  base.py  context_compaction.py  csrf_middleware.py  guardrails.py  large_file_storage.py  loop_detector.py  rate_limit.py  request_logger.py  safety_detectors.py  safety_middleware.py  skill_injection.py  summarization.py  todo_list.py  token_usage.py  trace_middleware.py  wrapper.py
src/novelfactory/pipeline/: __init__.py  base.py  phase2_manager.py  phase3_manager.py  scale_manager.py
src/novelfactory/schemas/: __init__.py  event_graph.py  review_schemas.py
src/novelfactory/server/: app.py  authz.py  deps.py  error_handlers.py  graph_router.py  metrics.py  models.py  schedulers.py  serialization.py  stream_tracker.py  streaming.py  stub_router.py  subtask_tracker.py
src/novelfactory/skills/: __init__.py  loader.py  manager.py  parser.py  storage.py  types.py
src/novelfactory/state/: __init__.py  chapter_state.py  crew_state.py  human_input.py  lead_agent_state.py  managed_values.py  novel_context.py  novel_state.py  reducers.py
src/novelfactory/store/: __init__.py  channel_connection.py  chapter_state_store.py  embedding.py  guide_store.py  milvus_store.py  neo4j_store.py  neo4j_updater.py  persistence.py  postgres_store.py  protocols.py  redis_store.py  tracker.py
src/novelfactory/tools/: __init__.py  feishu_tools.py  milvus_tools.py  neo4j_tools.py
src/novelfactory/utils/: __init__.py  converters.py  deterministic_id.py  message_utils.py  monitoring.py  realtime_logger.py  reflection.py  serialization.py  sse.py  time_utils.py  user_context.py  wall_time_tracker.py
tests/: conftest.py  test_api_integration.py  test_codec_standalone.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_crews.py  test_env_overrides.py  test_graph_compile.py  test_lightweight_setup.py  test_novel_state.py  test_phase_checks.py  test_review_nodes.py  test_routes_assistants.py  test_routes_health.py  test_routes_runs.py  test_routes_store.py  test_routes_threads.py  test_routing.py  test_score_router.py  test_streaming_progress.py
tests/unit/config/: test_constants_consistency.py
tests/unit/crews/: test_writing_crew_flow.py
tests/unit/evaluation/: test_debate_engine.py  test_llm_analysis.py  test_verdict_engine.py
tests/unit/graph/: test_new_builder.py  test_routing_supervisor.py
tests/unit/infra/: test_circuit_breaker.py  test_quota.py  test_retry.py  test_serialization.py  test_stream.py  test_usage.py
tests/unit/store/: test_postgres_store.py
(+130 files in other folders)
